# hermes

./: Cargo.toml  Dockerfile  README.md  flake.nix
src/: app.rs  constants.rs  lib.rs  main.rs  request.rs  styles.css
src/components/: counter.rs  main_content.rs  main_sidebar.rs  main_window.rs  mod.rs  request_bar.rs  request_body.rs  request_headers.rs  request_params.rs  response_headers.rs  response_preview.rs
src/components/request_headers/: mod.rs  request_header_input.rs
src/components/response_headers/: header_list_item.rs  mod.rs
src/utils/: mod.rs  network.rs  shortcut.rs  sourceview.rs
