[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
gobject-sys = "0.22.6"
relm4 = { version = "0.11.0", features = ["macros", "libadwaita"] }
relm4-components = "0.11.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
